# python_labs

./: README.md  pyproject.toml  requirements.txt
data/lab04/: input.txt  report.csv
data/lab05/samples/: .~lock.people.csv#  cities.csv  people.json
data/lab08/: students_output.json
data/lab09/: students.csv
src/lab01/: 02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_task.py  07_task.py  task_6.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: text.py  text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: models.py  serialize.py
src/lab09/: group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: csv_json.py  csv_xlsx.py  moduls.py
src/python_labs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_json_csv.py  test_text.py
